--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "clickhouse-connect[arrow,pyarrow]>=0.11.0",
-    "pandas>=3.0.0",
+    "openpyxl>=3.1.5",
+    "pandas[parquet]>=3.0.0",
     "python-calamine>=0.6.1",
     "sqlalchemy>=2.0.46",
 ]
